deployment/envoy-config.yaml
static_resources:
  listeners:
  - name: listener_80
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: simplemail
              domains: ["simplemail.yuheng.co"]
              routes:
                - match:
                    prefix: "/"
                  redirect:
                    host_redirect: simplemail.yuheng.co
                    scheme_redirect: HTTPS
                    port_redirect: 443
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: simplemail
              domains: ["simplemail.yuheng.co"]
              routes:
                - match:
                    prefix: "/api/"
                  route:
                    cluster: simplemail_spring_boot_api
                - match:
                    prefix: "/"
                  route:
                    cluster: react_static
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/simplemail.crt
                private_key:
                  filename: /etc/envoy/simplemail.key
  clusters:
  - name: simplemail_spring_boot_api
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: simplemail_spring_boot_api
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: spring
                    port_value: 8080
  - name: react_static
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: react_static
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: react
                    port_value: 3000
